objects/OSM_StateCode__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <label>State Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>OSM_StateCode</label>
</CustomObject>